# dungeon-crawler-jam-skeleton

./: .gitignore  CMakeLists.txt  LICENSE  build-emscripten.bat  build-emscripten.sh
assets/: README.md
assets/embedded/: CMakeLists.txt  test.txt
source_assets/web/: shell_minimal.html
src/: App.cpp  App.h  logging.h  main.cpp  memory.h  types.h
src/gfx/: gfx.h
